--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js13": "npm:discord.js@^13.0.0",
     "embed": "^0.0.1",
     "lol-discord": "^0.2.2",
+    "path": "^0.12.7",
     "puppeteer": "^14.4.1",
     "twitter-api-v2": "^1.12.3",
     "vi": "^1.0.0"
